# dotSage-

./: .gitignore  CHANGELOG.md  DEMO_SCRIPT.md  README.md
dotsage/: README.md  start.sh
dotsage/app/: next.config.js  package-lock.json  package.json  tsconfig.json
dotsage/app/src/components/: Navigation.tsx  WalletButton.tsx
dotsage/app/src/lib/: api.ts  contract_metadata.json  exampleQuestions.ts  polkadot.ts  useWallet.ts
dotsage/app/src/pages/: _app.tsx  analytics.tsx  ask.tsx  explore.tsx  index.tsx
dotsage/app/src/pages/question/: [id].tsx
dotsage/app/src/pages/user/: [address].tsx
dotsage/app/src/styles/: globals.css
dotsage/backend/: .env.example  package-lock.json  package.json  tsconfig.json
dotsage/backend/src/: index.ts  llm.ts
dotsage/backend/src/docs/: README.md
dotsage/contracts/: Cargo.toml  lib.rs
dotsage/docs/: DEPLOYMENT_GUIDE.md  GROQ_PRICING_GUIDE.md  ONCHAIN_SETUP.md
dotsage/scripts/: onchain_setup.sh
